Revision history for DBIx-Class-Migration.

0.065   
        - POD improvements - thanks @manwar

0.064   2019-03-05
        - on "install" with -V, use right fixtures - thanks @KES777 for report

0.063   2019-02-26
        - pass on dbic_connect_attrs even if no dsn - thanks @abeverley for report
        - handle SQL keywords in identifiers - thanks @ikapelyukhin for report

0.062   2019-02-25
        - update DBIx::Class::DeploymentHandler dep to 0.002222 - thanks @KES777 for report
        - POD improvements - thanks @manwar
        - use Log::Any for errors - thanks @upasana-me
        - coerce target_dir to absolute to work right on 5.26+

0.061   2019-02-25
        - POD improvements - thanks @n7st and @willsheppard
        - make the tests work running in parallel
        - Ignore Views when running 'prepare' - thanks @mulletboy2
        - say valid possibilities if --database= invalid

0.060   2017-10-17
        - fixed VERSION mistake in previous release

0.059   2017-10-17
        - Merged in some PRs around typos
        - Merged PR to convert to Test::Postgresql58
        - Use modern versions of dependencies
        
0.058   2016-01-07
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/61 (doc update)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/64 (find local perl install better)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/53 (use JSON module with more reliable author)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/57 (quote table names better)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/56 (properly delete stuff)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/68 (work properly on newer Perl)
        - Thanks for all the PRs, sorry I was slow to pick this up :(

0.057   2015-03-24
        - Lowered some dependency versions to solve reported installation
          issues (Some stuff is not 'dual lived' and only gets updated with