@@ -27,7 +27,7 @@ MooseX::Getopt = 0.68
 MooseX::Traits::Pluggable = 0.12
 MooseX::Types::LoadableClass = 0.013
 MooseX::Types = 0.45
-DBIx::Class::DeploymentHandler = 0.002222
+DBIx::Class::DeploymentHandler = 0.002223
 DBIx::Class::Schema::Loader = 0.07042
 DBIx::Class::Fixtures = 1.001028
 JSON::MaybeXS = 0
